--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar color="primary">
-    <div>
-      <span>Parking Management System</span>
-    </div>
+  <div>
+    <span>Parking Management System</span>
+  </div>
 </mat-toolbar>
 <div class="container">
   <div class="menu-right">
-    <button mat-raised-button color="accent">Dashboard</button>
+    <button mat-raised-button color="accent" routerLink="dashboard">Dashboard</button>
     <span>&nbsp;</span>
     <button mat-raised-button color="accent" routerLink="car-entry">Car Entry</button>
     <span>&nbsp;</span>
